--- a/assets/styles/sass/main.scss
+++ b/assets/styles/sass/main.scss
@@ -5,5 +5,5 @@
 @import "./layout/footer";
 @import "./pages/home";
 @import "./pages/about";
-@import "./pages/portfolio";
+@import "./pages/shop";
 @import "./pages/contact";
