--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -88,7 +88,7 @@ header button::before, .home #about-artist .text button::before {
 
 .shopping-icon {
   padding: 0 30px;
-  color: #fff;
+  color: #000;
   font-size: 30px;
   cursor: pointer;
   transition: all 0.5s ease;
@@ -132,8 +132,7 @@ header {
   justify-content: space-between;
   padding: 20px 100px;
   max-height: 100px;
-  background: rgba(129, 92, 72, 0.6745098039);
-  position: fixed;
+  position: absolute;
   z-index: 2;
   width: 100%;
 }
@@ -149,9 +148,10 @@ header .links {
   gap: 40px;
 }
 header .links a {
-  color: #fff;
+  color: #000;
+  font-weight: 700;
   position: relative;
-  text-shadow: 1px 1px 10px rgb(0, 0, 0);
+  text-shadow: 1px 1px 5px #fa9a8c;
 }
 header .links a::after {
   content: "";
@@ -161,7 +161,7 @@ header .links a::after {
   display: block;
   left: 0;
   bottom: 0;
-  background: linear-gradient(to right, #fa9a8c, #f7b0a6);
+  background: black;
   transition: width 0.3s;
 }
 header .links a:hover::after {
@@ -218,12 +218,16 @@ header button::before, .home #about-artist .text button::before {
   transition: all 0.5s ease;
 }
 
+.home {
+  width: 100%;
+}
 .home #hero-section {
   height: 100vh;
-  background: url("../../img/glamify-home-bg.jpg");
+  background: url("../../../assets/img/original-home.jpg");
   background-repeat: no-repeat;
   width: 100%;
   background-size: cover;
+  background-position: top right;
 }
 .home #hero-section .text {
   display: flex;
@@ -231,13 +235,16 @@ header button::before, .home #about-artist .text button::before {
   justify-content: center;
   height: 100vh;
   margin-left: 130px;
+  color: #000;
 }
 .home #hero-section .text h1 {
-  font-size: 50px;
+  font-size: 70px;
   margin-bottom: 15px;
+  font-family: "Oooh Baby", cursive;
+  text-shadow: 1px 1px 5px #fa9a8c;
 }
 .home #hero-section .text p {
-  font-size: 20px;
+  font-size: 18px;
 }
 .home #hero-section .text.animate-slide-in {
   opacity: 0;
@@ -283,6 +290,197 @@ header button::before, .home #about-artist .text button::before {
 .home #about-artist img:hover {
   transform: scale(1.02);
   box-shadow: rgba(50, 50, 93, 0.5) 0px 30px 60px -12px, rgba(0, 0, 0, 0.6) 0px 18px 36px -18px;
+}
+.home #best-services {
+  margin-top: 150px;
+}
+.home #best-services h2 {
+  font-size: 20px;
+  color: #fa9a8c;
+  font-weight: 500;
+  letter-spacing: 4px;
+  text-align: center;
+}
+.home #best-services p {
+  font-size: 70px;
+  font-family: "Oooh Baby", cursive;
+  line-height: 125px;
+  text-align: center;
+}
+.home #best-services .box-container {
+  padding: 50px 100px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 70px;
+  background: url("	https://preview.colorlib.com/theme/makeupartist/img/services/services-bg.png");
+  background-repeat: no-repeat;
+}
+.home #best-services .box-container .box {
+  position: relative;
+}
+.home #best-services .box-container .box img {
+  width: 280px;
+  height: 350px;
+  object-fit: cover;
+}
+.home #best-services .box-container .box .img-b {
+  margin-top: 74px;
+}
+.home #best-services .box-container .box .details {
+  padding: 10px;
+  position: absolute;
+  width: 280px;
+  left: 0;
+  top: 0px;
+  transition: all 0.3s linear;
+}
+.home #best-services .box-container .box .details h5 {
+  font-size: 20px;
+  font-weight: 500;
+  color: #200204;
+  margin-bottom: 5px;
+}
+.home #best-services .box-container .box .details span {
+  color: #fa9a8c;
+  font-weight: 500;
+}
+.home #best-services .box-container .box .details-t {
+  position: absolute;
+  width: 280px;
+  left: 0;
+  top: 350px;
+  transition: all 0.3s linear;
+}
+.home #best-services .box-container .box .details-t h5 {
+  font-size: 20px;
+  font-weight: 500;
+  color: #200204;
+  margin-bottom: 5px;
+}
+.home #best-services .box-container .box .details-t span {
+  color: #fa9a8c;
+  font-weight: 500;
+}
+.home #best-services .box-container .box:hover > .details {
+  top: 50px;
+  background-color: #fff;
+  padding: 20px 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.home #best-services .box-container .box:hover > .details-t {
+  top: 260px;
+}
+.home #gallery {
+  margin: 100px 0;
+}
+.home #gallery h2 {
+  text-align: left;
+  margin-left: 50px;
+  font-size: 40px;
+  margin-bottom: 20px;
+  font-family: "Oooh Baby", cursive;
+  color: #fa9a8c;
+}
+.home #gallery .image-boxes {
+  display: grid;
+  width: 100%;
+  grid-template-areas: "first second third third fourth fifth" "first sixth third third seventh seventh";
+  gap: 20px;
+  padding: 20px 50px;
+}
+.home #gallery .image-boxes img {
+  width: 100%;
+  object-fit: cover;
+  transition: all 0.3s linear;
+}
+.home #gallery .image-boxes .img1 {
+  grid-area: first;
+  height: 520px;
+}
+.home #gallery .image-boxes .img2 {
+  grid-area: second;
+  height: 250px;
+}
+.home #gallery .image-boxes .img3 {
+  grid-area: third;
+  height: 520px;
+}
+.home #gallery .image-boxes .img4 {
+  grid-area: fourth;
+  height: 250px;
+}
+.home #gallery .image-boxes .img5 {
+  grid-area: fifth;
+  height: 250px;
+}
+.home #gallery .image-boxes .img6 {
+  grid-area: sixth;
+  height: 250px;
+}
+.home #gallery .image-boxes .img7 {
+  grid-area: seventh;
+  height: 250px;
+}
+.home #products {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background: rgb(248, 242, 242);
+  padding: 20px 0 70px;
+}
+.home #products h2 {
+  font-size: 20px;
+  color: #fa9a8c;
+  font-weight: 500;
+  letter-spacing: 4px;
+  text-align: center;
+  padding: 20px 0;
+}
+.home #products .bp-heading {
+  font-size: 70px;
+  font-family: "Oooh Baby", cursive;
+  line-height: 50px;
+  text-align: center;
+}
+.home #products .container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+  margin-top: 50px;
+}
+.home #products .container div {
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  padding: 20px;
+  transition: all 0.3s linear;
+  cursor: pointer;
+  background-color: #fff;
+  border-radius: 3px;
+  text-align: center;
+}
+.home #products .container div img {
+  width: 250px;
+}
+.home #products .container div .category {
+  font-size: 13px;
+  color: rgb(136, 136, 136);
+}
+.home #products .container div .price {
+  color: #fa9a8c;
+  font-size: 13px;
+  font-weight: 500;
+}
+.home #products .container div:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transform: scale(1.05);
+}
+.home #products a {
+  color: #000;
+  padding: 50px 0 0;
+}
+.home #products hr {
+  width: 200px;
+  border: 1px solid #000;
 }
 
 @keyframes slide-in {
@@ -339,6 +537,45 @@ header button::before, .home #about-artist .text button::before {
   height: 100%;
   background: rgba(255, 255, 255, 0.15);
   transition: all 0.5s ease;
+}
+
+.shop {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  padding: 20px;
+}
+
+.card {
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+}
+.card:hover {
+  transform: scale(1.05);
+}
+.card img {
+  width: 100%;
+  height: auto;
+}
+.card .content {
+  padding: 15px;
+  background: #fff;
+}
+.card .content h3 {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+}
+.card .content p {
+  font-size: 0.9em;
+  margin-bottom: 15px;
+}
+.card .content .price {
+  font-size: 1em;
+  font-weight: bold;
+  color: #333;
 }
 
 header button, .home #about-artist .text button {
