--- a/assets/styles/sass/components/_icons.scss
+++ b/assets/styles/sass/components/_icons.scss
@@ -4,7 +4,7 @@
 
 .shopping-icon{
     padding:0 30px;
-    color: #fff;
+    color: #000;
     font-size: 30px;
     cursor: pointer;
     transition: all 0.5s ease;
