--- a/assets/styles/sass/layout/_footer.scss
+++ b/assets/styles/sass/layout/_footer.scss
@@ -1,3 +1,104 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/extends" as *;
 @use "../abstracts/mixin" as *;
+
+.footer {
+  background-color: #F8F2F2;
+  padding: 40px 0;
+  
+}
+
+.container {
+  max-width: 1170px;
+  margin: auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+ul {
+  list-style: none;
+}
+
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
+}
+
+.footer-col h4 {
+  font-size: 18px;
+  color: black;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+
+.footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: #fa9a8c;
+ width: 100%;
+  height: 2px;
+}
+
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  color: #333;
+  display: block;
+  font-size: 1rem;
+  font-weight: 300;
+  text-transform: capitalize;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover {
+  color: #000;
+  padding-left: 7px;
+}
+.footer-col .social-links{
+    display: flex;
+}
+.footer-col .social-links a {
+  color: #fa9a8c;
+  background-color: #fff;
+  border: 1px solid #fa9a8c;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 0 10px 10px 0;
+  line-height: 40px;
+  transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover {
+  color: #fff;
+  background-color: #fa9a8c;
+  border: none;
+}
+
+@media (max-width: 767px) {
+  .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 574px) {
+  .footer-col {
+    width: 100%;
+  }
+}
