--- a/assets/styles/sass/abstracts/_extends.scss
+++ b/assets/styles/sass/abstracts/_extends.scss
@@ -22,3 +22,19 @@
   background: rgba(255, 255, 255, 0.15);
   transition: all 0.5s ease;
 }
+%homeh2{
+  
+  font-size: 20px;
+  color: #fa9a8c;
+  font-weight: 500;
+  letter-spacing: 4px;
+  text-align: center;
+
+}
+  
+%homep{
+  font-size: 70px;
+  font-family: "Oooh Baby", cursive;
+  line-height: 100px;
+  text-align: center;
+}
