--- a/assets/styles/sass/layout/_header.scss
+++ b/assets/styles/sass/layout/_header.scss
@@ -22,7 +22,7 @@ header {
       font-weight: 700;
       position: relative;
       // text-shadow: 1px 1px 10px rgba(0, 0, 0);
-      text-shadow: 1px 1px 5px #fa9a8c;
+      // text-shadow: 1px 1px 5px #fa9a8c;
     }
     a::after {
       content: "";
