--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -14,7 +14,7 @@ ul, li {
   list-style: none;
 }
 
-header button, .home #about-artist .text button, .home #contact .right-side .book {
+header button, .home #about-artist .text button, #contact .right-side .book {
   border-radius: 20px;
   padding: 10px 20px;
   background: linear-gradient(to right, #FA9A8C, #F7B0A6);
@@ -28,7 +28,7 @@ header button, .home #about-artist .text button, .home #contact .right-side .boo
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-header button::before, .home #about-artist .text button::before, .home #contact .right-side .book::before {
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
   content: "";
   position: absolute;
   top: 0;
@@ -71,24 +71,42 @@ header button:hover {
   left: 100%;
 }
 
-.home #about-artist .text button:hover {
+#about-artist .text button:hover {
   transform: scale(1.05);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
 
-.home #contact .right-side .book {
+#contact .right-side .book {
   box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5) !important;
 }
-.home #contact .right-side .book:hover::before {
+#contact .right-side .book:hover::before {
   left: 100%;
 }
 
-.home #contact .right-side .book:hover {
+#contact .right-side .book:hover {
   transform: scale(1.05);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
 
-header button, .home #about-artist .text button, .home #contact .right-side .book {
+#services .box .details button {
+  border-radius: 20px;
+  padding: 10px 20px;
+  border: #FA9A8C 1px solid;
+  background-color: #fff;
+  font-size: 22px;
+  color: #FA9A8C;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s linear;
+}
+
+#services .box .details button:hover {
+  color: #fff;
+  background-color: #FA9A8C;
+  transform: scale(1.1);
+}
+
+header button, .home #about-artist .text button, #contact .right-side .book {
   border-radius: 20px;
   padding: 10px 20px;
   background: linear-gradient(to right, #FA9A8C, #F7B0A6);
@@ -102,7 +120,7 @@ header button, .home #about-artist .text button, .home #contact .right-side .boo
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-header button::before, .home #about-artist .text button::before, .home #contact .right-side .book::before {
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
   content: "";
   position: absolute;
   top: 0;
@@ -142,7 +160,7 @@ header button::before, .home #about-artist .text button::before, .home #contact 
   transform: scale(1.1);
 }
 
-header button, .home #about-artist .text button, .home #contact .right-side .book {
+header button, .home #about-artist .text button, #contact .right-side .book {
   border-radius: 20px;
   padding: 10px 20px;
   background: linear-gradient(to right, #FA9A8C, #F7B0A6);
@@ -156,7 +174,7 @@ header button, .home #about-artist .text button, .home #contact .right-side .boo
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-header button::before, .home #about-artist .text button::before, .home #contact .right-side .book::before {
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
   content: "";
   position: absolute;
   top: 0;
@@ -208,7 +226,6 @@ header .links a {
   color: #000;
   font-weight: 700;
   position: relative;
-  text-shadow: 1px 1px 5px #fa9a8c;
 }
 header .links a::after {
   content: "";
@@ -225,7 +242,7 @@ header .links a:hover::after {
   width: 100%;
 }
 
-header button, .home #about-artist .text button, .home #contact .right-side .book {
+header button, .home #about-artist .text button, #contact .right-side .book {
   border-radius: 20px;
   padding: 10px 20px;
   background: linear-gradient(to right, #FA9A8C, #F7B0A6);
@@ -239,7 +256,7 @@ header button, .home #about-artist .text button, .home #contact .right-side .boo
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-header button::before, .home #about-artist .text button::before, .home #contact .right-side .book::before {
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
   content: "";
   position: absolute;
   top: 0;
@@ -365,7 +382,7 @@ ul {
     width: 100%;
   }
 }
-header button, .home #about-artist .text button, .home #contact .right-side .book {
+header button, .home #about-artist .text button, #contact .right-side .book {
   border-radius: 20px;
   padding: 10px 20px;
   background: linear-gradient(to right, #FA9A8C, #F7B0A6);
@@ -379,7 +396,7 @@ header button, .home #about-artist .text button, .home #contact .right-side .boo
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-header button::before, .home #about-artist .text button::before, .home #contact .right-side .book::before {
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
   content: "";
   position: absolute;
   top: 0;
@@ -734,7 +751,8 @@ header button::before, .home #about-artist .text button::before, .home #contact 
 .home #tips .tips-container .box:hover {
   box-shadow: rgba(50, 50, 50, 0.2) 0px 2px 8px 2px;
 }
-.home #contact {
+
+#contact {
   width: 100%;
   margin: 0 auto;
   height: 80vh;
@@ -745,23 +763,23 @@ header button::before, .home #about-artist .text button::before, .home #contact 
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-.home #contact .left-side {
+#contact .left-side {
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-shadow: 1px 1px 5px #fa9a8c;
 }
-.home #contact .left-side h2 {
+#contact .left-side h2 {
   font-size: 50px;
   font-weight: 700;
 }
-.home #contact .left-side span {
+#contact .left-side span {
   font-size: 50px;
   font-family: "Oooh Baby", cursive;
   font-weight: 800;
 }
-.home #contact .right-side {
+#contact .right-side {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -769,27 +787,27 @@ header button::before, .home #about-artist .text button::before, .home #contact 
   gap: 30px;
   margin-left: 100px;
 }
-.home #contact .right-side h2 {
+#contact .right-side h2 {
   font-size: 30px;
   text-shadow: 1px 1px 5px #fa9a8c;
 }
-.home #contact .right-side form {
+#contact .right-side form {
   display: flex;
   flex-direction: column;
   gap: 30px;
 }
-.home #contact .right-side form div {
+#contact .right-side form div {
   display: flex;
   gap: 20px;
 }
-.home #contact .right-side form div input,
-.home #contact .right-side form div select {
+#contact .right-side form div input,
+#contact .right-side form div select {
   width: 250px;
   padding: 20px;
   border: none;
   font-size: 16px;
 }
-.home #contact .right-side form textarea {
+#contact .right-side form textarea {
   padding: 10px 20px;
   border: none;
   height: 100px;
@@ -802,7 +820,7 @@ header button::before, .home #about-artist .text button::before, .home #contact 
     transform: translateX(0);
   }
 }
-header button, .home #about-artist .text button, .home #contact .right-side .book {
+header button, .home #about-artist .text button, #contact .right-side .book {
   border-radius: 20px;
   padding: 10px 20px;
   background: linear-gradient(to right, #FA9A8C, #F7B0A6);
@@ -816,7 +834,7 @@ header button, .home #about-artist .text button, .home #contact .right-side .boo
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-header button::before, .home #about-artist .text button::before, .home #contact .right-side .book::before {
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
   content: "";
   position: absolute;
   top: 0;
@@ -842,7 +860,7 @@ header button::before, .home #about-artist .text button::before, .home #contact 
   text-align: center;
 }
 
-header button, .home #about-artist .text button, .home #contact .right-side .book {
+header button, .home #about-artist .text button, #contact .right-side .book {
   border-radius: 20px;
   padding: 10px 20px;
   background: linear-gradient(to right, #FA9A8C, #F7B0A6);
@@ -856,7 +874,7 @@ header button, .home #about-artist .text button, .home #contact .right-side .boo
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-header button::before, .home #about-artist .text button::before, .home #contact .right-side .book::before {
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
   content: "";
   position: absolute;
   top: 0;
@@ -921,7 +939,7 @@ header button::before, .home #about-artist .text button::before, .home #contact 
   color: #333;
 }
 
-header button, .home #about-artist .text button, .home #contact .right-side .book {
+header button, .home #about-artist .text button, #contact .right-side .book {
   border-radius: 20px;
   padding: 10px 20px;
   background: linear-gradient(to right, #FA9A8C, #F7B0A6);
@@ -935,7 +953,7 @@ header button, .home #about-artist .text button, .home #contact .right-side .boo
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-header button::before, .home #about-artist .text button::before, .home #contact .right-side .book::before {
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
   content: "";
   position: absolute;
   top: 0;
@@ -959,4 +977,95 @@ header button::before, .home #about-artist .text button::before, .home #contact 
   font-family: "Oooh Baby", cursive;
   line-height: 100px;
   text-align: center;
+}
+
+header button, .home #about-artist .text button, #contact .right-side .book {
+  border-radius: 20px;
+  padding: 10px 20px;
+  background: linear-gradient(to right, #FA9A8C, #F7B0A6);
+  border: none;
+  font-size: 22px;
+  color: white;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+header button::before, .home #about-artist .text button::before, #contact .right-side .book::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.15);
+  transition: all 0.5s ease;
+}
+
+.home #best-services h2, .home #products h2, .home #tips h2 {
+  font-size: 20px;
+  color: #fa9a8c;
+  font-weight: 500;
+  letter-spacing: 4px;
+  text-align: center;
+}
+
+.home #best-services p, .home #products .bp-heading, .home #tips .tips-heading {
+  font-size: 70px;
+  font-family: "Oooh Baby", cursive;
+  line-height: 100px;
+  text-align: center;
+}
+
+#services {
+  padding-top: 80px;
+}
+#services .box {
+  margin: 100px 0;
+  display: flex;
+  padding: 0 100px;
+  gap: 60px;
+}
+#services .box .details {
+  background: url("https://preview.colorlib.com/theme/makeupartist/img/about/about-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 45%;
+}
+#services .box .details span {
+  font-size: 16px;
+  color: #fa9a8c;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+#services .box .details h2 {
+  color: #200204;
+  font-weight: 500;
+  margin-bottom: 40px;
+  font-size: 40px;
+}
+#services .box .details p {
+  color: #200204;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+#services .box .details p i {
+  color: #fa9a8c;
+  padding-right: 10px;
+}
+#services .images .img1 {
+  width: 330px;
+  height: 450px;
+  margin-right: 30px;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+#services .images .img2 {
+  width: 280px;
+  height: 350px;
+  margin-bottom: 25px;
+  object-fit: cover;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
