--- a/assets/styles/sass/pages/_home.scss
+++ b/assets/styles/sass/pages/_home.scss
@@ -243,6 +243,7 @@
       grid-template-columns: repeat(4, 1fr);
       gap: 30px;
       margin-top: 50px;
+      margin-left: 150px;
       .box {
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         padding: 20px;
