--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -148,7 +148,7 @@ header button::before, .home #about-artist .text button::before, #contact .right
 
 .shopping-icon {
   padding: 0 30px;
-  color: #000;
+  color: #fff;
   font-size: 30px;
   cursor: pointer;
   transition: all 0.5s ease;
@@ -223,9 +223,10 @@ header .links {
   gap: 40px;
 }
 header .links a {
-  color: #000;
+  color: #fff;
   font-weight: 700;
   position: relative;
+  text-shadow: 1px 1px 2px #000;
 }
 header .links a::after {
   content: "";
@@ -427,19 +428,29 @@ header button::before, .home #about-artist .text button::before, #contact .right
 }
 .home #hero-section {
   height: 100vh;
-  background: url("../../../assets/img/original-home.jpg");
-  background-repeat: no-repeat;
+  position: relative;
   width: 100%;
-  background-size: cover;
-  background-position: top right;
+}
+.home #hero-section video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 .home #hero-section .text {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100vh;
   margin-left: 130px;
-  color: #000;
+  color: #fff;
+  z-index: 2;
 }
 .home #hero-section .text h1 {
   font-size: 70px;
@@ -901,43 +912,27 @@ header button::before, .home #about-artist .text button::before, #contact .right
   text-align: center;
 }
 
-.shop {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
-  padding: 20px;
+#shop .filters {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
-
-.card {
+#shop .product-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+#shop .card {
   border: 1px solid #ccc;
   border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
 }
-.card:hover {
-  transform: scale(1.05);
-}
-.card img {
-  width: 100%;
+#shop .card img {
+  max-width: 100%;
   height: auto;
-}
-.card .content {
-  padding: 15px;
-  background: #fff;
-}
-.card .content h3 {
-  font-size: 1.2em;
-  margin-bottom: 10px;
-}
-.card .content p {
-  font-size: 0.9em;
-  margin-bottom: 15px;
-}
-.card .content .price {
-  font-size: 1em;
-  font-weight: bold;
-  color: #333;
+  border-radius: 8px;
 }
 
 header button, .home #about-artist .text button, #contact .right-side .book {
