--- a/assets/styles/sass/components/_icons.scss
+++ b/assets/styles/sass/components/_icons.scss
@@ -2,16 +2,15 @@
 @use "../abstracts/extends" as *;
 @use "../abstracts/mixin" as *;
 
-.shopping-icon{
-    padding:0 30px;
-    color: #000;
-    font-size: 30px;
-    cursor: pointer;
-    transition: all 0.5s ease;
-    margin: 0 auto;
-    text-shadow: 1px 1px 10px rgba(0, 0, 0);
+.shopping-icon {
+  padding: 0 30px;
+  color: #fff;
+  font-size: 30px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  margin: 0 auto;
+  text-shadow: 1px 1px 10px rgba(0, 0, 0);
 }
-.shopping-icon:hover{
-    transform: scale(1.1);
-    
+.shopping-icon:hover {
+  transform: scale(1.1);
 }
