--- a/assets/styles/sass/pages/_home.scss
+++ b/assets/styles/sass/pages/_home.scss
@@ -6,22 +6,29 @@
   width: 100%;
   #hero-section {
     height: 100vh;
-    // background: url("../../../assets/img/glamify-home-bg.jpg");
-    // background: url("https://static.thcdn.com/images/xlarge/webp/widgets/95-en/18/original-0701_367795_LF_AH_July_Batching_NonPriority_Shot11_1920x600-132318.jpeg");
-    // background: url("https://static.thcdn.com/images/xlarge/webp/widgets/95-en/39/original-0626_367761_LF_AH_July_Batching_Priority_Shot7_1920x600-030239.jpeg");
-    background: url("../../../assets/img/original-home.jpg");
-    background-repeat: no-repeat;
+    position: relative;
     width: 100%;
-    background-size: cover;
-    background-position: top right;
+    video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      max-width: 100%;
 
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+    }
     .text {
+      position: absolute;
+      top: 0;
+      left: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
       height: 100vh;
       margin-left: 130px;
-      color: #000;
+      color: #fff;
+      z-index: 2;
 
       h1 {
         font-size: 70px;
@@ -284,10 +291,9 @@
             height: 15px;
             font-size: 10px;
             color: #fa9a8c;
-            transition: all .5s linear;
-        
+            transition: all 0.5s linear;
           }
-          .icon:hover{
+          .icon:hover {
             background-color: #fa9a8c;
             color: #fff;
             transform: rotate(360deg);
@@ -373,7 +379,6 @@
       }
     }
   }
-
 }
 
 #contact {
