--- a/assets/styles/sass/pages/_shop.scss
+++ b/assets/styles/sass/pages/_shop.scss
@@ -1,48 +1,30 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/extends" as *;
 @use "../abstracts/mixin" as *;
-.shop {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+#shop{
+  .filters {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  
+  .product-cards {
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
-    padding: 20px;
   }
   
   .card {
     border: 1px solid #ccc;
     border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s;
-  
-    &:hover {
-      transform: scale(1.05);
-    }
-  
-    img {
-      width: 100%;
-      height: auto;
-    }
-  
-    .content {
-      padding: 15px;
-      background: #fff;
-  
-      h3 {
-        font-size: 1.2em;
-        margin-bottom: 10px;
-      }
-  
-      p {
-        font-size: 0.9em;
-        margin-bottom: 15px;
-      }
-  
-      .price {
-        font-size: 1em;
-        font-weight: bold;
-        color: #333;
-      }
-    }
+    padding: 20px;
+    width: 200px;
+    text-align: center;
   }
   
+  .card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+}
